# Coding-Projects

./: README.md
C++/: helloworld  namespaces  namespaces.cpp  types_data  types_data.cpp  user_inputs  user_inputs.cpp
C++/C++ Basics/Lesson One/: calculator  calculator.cpp  console_calculator  console_calculator.cpp  helloworld  helloworld.cpp  if_statements  if_statements.cpp  logical_operators  logical_operators.cpp  math_functions  math_functions.cpp  string_methods  string_methods.cpp  switches  switches.cpp  temp_convert  temp_convert.cpp  ternary_operator  ternary_operator.cpp  user_inputs  user_inputs.cpp
C++/Widget System/: CMakeLists.txt  flake.nix  spider_shell.hpp
C++/Widget System/services/: date.cpp
Python/Client Server/: base.html  main.py
Python/Ecommerce Application/: README.md  auth.py  database.py  ecommerce.db  order_management.py  product_catalog.py  shopping_cart.py
Python/Mini-Ecommerce Application/: inventory_management.py  main.py  sales_report.py
Python/Ouranos/: README.md  game.py  ouranos.py
